--- a/app/src/main/res/layout/community.xml
+++ b/app/src/main/res/layout/community.xml
@@ -8,69 +8,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
-    <LinearLayout
-        android:id="@+id/CommunityListView"
-        android:layout_width="370dp"
-        android:layout_height="130dp"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.35"
-        android:background="@color/white">
-
-
-        <ImageView
-            android:id="@+id/ProfileImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/img1"
-            android:layout_marginVertical="10dp"
-            android:layout_marginHorizontal="10dp"/>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/NickName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="가연"
-                android:layout_marginVertical="15dp"
-                android:layout_marginHorizontal="10dp" />
-
-            <TextView
-                android:id="@+id/CommunityStory"
-                android:layout_width="250dp"
-                android:layout_height="60dp"
-                android:layout_marginEnd="10dp"
-                android:text="오늘 000-0000-0000에서 전화가 왔었는데\n이 어플 덕분에 다행이 보이스피싱인줄\n알게되었어요!"
-                android:layout_marginBottom="10dp"
-                />
-
-        </LinearLayout>
-
-        <Button
-            android:layout_width="55dp"
-            android:layout_height="50dp"
-            android:text="더보기"
-            android:textColor="#D3D3D3"
-            android:backgroundTint="@color/white"
-            android:textSize="7dp"
-            android:layout_marginTop="75dp"/>
-
-
-    </LinearLayout>
 
     <View
+        android:id="@+id/TopView"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:background="@color/white"
@@ -83,7 +24,7 @@
         android:id="@+id/BackButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="<-"
+        android:text="B"
         android:textColor="#28BEEE"
         android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -109,29 +50,17 @@
         app:layout_constraintVertical_bias="0.05"
         app:layout_constraintHorizontal_bias="0.9" />
 
-    <SearchView
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:iconifiedByDefault="false"
-        android:queryHint="키워드를 입력하세요."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.15" />
-
-    <ScrollView
-        android:layout_width="415dp"
-        android:layout_height="548dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="1" >
-
-    </ScrollView>
-
+        app:layout_constraintVertical_bias="0.15"
+        android:queryHint="키워드를 입력하세요."/>
 
     <TextView
         android:id="@+id/TopTextView"
@@ -147,7 +76,33 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05" />
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="530dp"
+        android:fillViewport="true"
+        android:scrollbars="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/TopView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+    </LinearLayout>
+    </ScrollView>
+
+
+
     <Button
+        android:id="@+id/AddStoryButton"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:backgroundTint="#28BEEE"
@@ -159,6 +114,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.85" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
