--- a/app/src/main/res/layout/reportpage.xml
+++ b/app/src/main/res/layout/reportpage.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <View
+        android:id="@+id/TopView"
         android:layout_width="match_parent"
         android:layout_height="110dp"
         android:background="@color/white"
@@ -34,7 +35,7 @@
         android:id="@+id/BackButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="<-"
+        android:text="B"
         android:textColor="#28BEEE"
         android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -60,102 +61,109 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05"
         app:layout_constraintHorizontal_bias="0.9" />
-
-    <TextView
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="번호 (선택)"
-        android:textSize="23dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2"
-        app:layout_constraintHorizontal_bias="0.2" />
+        android:fillViewport="true"
+        android:scrollbars="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/TopView">
 
-    <EditText
-        android:id="@+id/OptionalPhoneNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="01012345678"
-        android:width="300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.27"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="신고 유형"
-        android:textSize="23dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.37"
-        app:layout_constraintHorizontal_bias="0.2" />
+            <TextView
+                android:id="@+id/phonelable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="번호 (선택)"
+                android:textSize="23dp"
+                app:layout_constraintTop_toBottomOf="@+id/TopView"
+                android:layout_marginTop="30dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="60dp"/>
 
-    <Button
-        android:id="@+id/PopUpButton"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:text="유형선택"
-        android:textColor="#28BEEE"
-        android:backgroundTint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.45" />
+            <EditText
+                android:id="@+id/OptionalPhoneNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:width="300dp"
+                android:hint="01012345678"
+                app:layout_constraintTop_toBottomOf="@+id/phonelable"
+                android:layout_marginStart="60dp"
+                android:layout_marginEnd="60dp"/>
+
+            <TextView
+                android:id="@+id/whichLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="신고 유형"
+                android:textSize="23dp"
+                app:layout_constraintTop_toBottomOf="@+id/OptionalPhoneNumber"
+                android:layout_marginTop="40dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="60dp" />
+
+            <Button
+                android:id="@+id/PopUpButton"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="유형선택"
+                android:textColor="#28BEEE"
+                android:backgroundTint="@color/white"
+                app:layout_constraintTop_toBottomOf="@+id/whichLabel"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginEnd="60dp"/>
 
 
-    <TextView
-        android:id="@+id/StoryTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="신고 이유"
-        android:textSize="23dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.55"
-        app:layout_constraintHorizontal_bias="0.2" />
+            <TextView
+                android:id="@+id/StoryReason"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="신고 이유"
+                android:textSize="23dp"
+                app:layout_constraintTop_toBottomOf="@+id/PopUpButton"
+                android:layout_marginTop="30dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="60dp"/>
 
-    <EditText
-        android:id="@+id/StoryBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="내용을 입력하세요"
-        android:width="300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8"
-        android:lines="16"
-        android:minLines="8"
-        android:maxLines="16"
-        android:scrollbars="vertical"
-        />
+            <EditText
+                android:id="@+id/StoryBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="내용을 입력하세요"
+                android:layout_alignParentBottom="true"
+                android:width="300dp"
+                app:layout_constraintTop_toBottomOf="@+id/StoryReason"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginEnd="60dp"
+                android:lines="16"
+                android:minLines="8"
+                android:maxLines="16"
+                android:scrollbars="vertical"
+                />
 
-    <Button
-        android:id="@+id/EndWrite"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:text="신고하기"
-        android:textColor="@color/white"
-        android:backgroundTint="#E76363"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95"
-        />
+            <Button
+                android:id="@+id/EndWriteButton"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="작성하기"
+                android:textColor="@color/white"
+                android:backgroundTint="#E76363"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@+id/StoryBox"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="120dp"
+                android:layout_marginEnd="120dp"
+                />
+        </LinearLayout>
+
+    </ScrollView>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
