--- a/app/src/main/res/layout/diagnose_morepage.xml
+++ b/app/src/main/res/layout/diagnose_morepage.xml
@@ -1,46 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="400dp"
+    android:layout_height="500dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#F0F0F0"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:layout_gravity="center">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
-
-
-    </View>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="더 알아보기"
-        android:textColor="@color/black"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal"/>
-
-    <TextView
-        android:layout_width="350dp"
-        android:layout_height="600dp"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="65dp"
-        android:text="단어 순위 의심도\n 높게 나온 이유"
+    <LinearLayout
+        android:id="@+id/MoreInfoLabel"
+        android:background="#28BEEE"
         android:gravity="center"
-        android:textSize="30dp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
 
-    </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:gravity="center"
+            android:text="더 알아보기"
+            android:textColor="@color/white"
+            android:textSize="40dp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/MoreInfoforConstraint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/MoreInfoLabel">
+
+        <TextView
+            android:id="@+id/MoreInfoStory"
+            android:layout_width="match_parent"
+            android:layout_height="360dp"
+            android:gravity="center"
+            android:text="단어 순위 의심도\n 높게 나온 이유"
+            android:textColor="@color/black"
+            android:textSize="30dp"
+            android:textStyle="bold">
+
+        </TextView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/MoreInfoforConstraint">
+        <Button
+            android:id="@+id/OkayButton"
+            android:text="확인"
+            android:textColor="#28BEEE"
+            android:textStyle="bold"
+            android:textSize="30dp"
+            android:backgroundTint="#F0F0F0"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
