--- a/app/src/main/res/layout/diagnose_report_notserious.xml
+++ b/app/src/main/res/layout/diagnose_report_notserious.xml
@@ -34,7 +34,7 @@
         android:id="@+id/BackButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="<-"
+        android:text="B"
         android:textColor="#28BEEE"
         android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,6 +61,7 @@
         app:layout_constraintHorizontal_bias="0.9" />
 
     <View
+        android:id="@+id/RiskPercentView"
         android:layout_width="350dp"
         android:layout_height="300dp"
         android:background="@color/white"
@@ -71,16 +72,16 @@
         app:layout_constraintVertical_bias="0.3" />
 
     <TextView
+        android:id="@+id/RiskLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="보이스피싱 의심도"
         android:textSize="25dp"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.22"
+        app:layout_constraintTop_toTopOf="@+id/RiskPercentView"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:textStyle="bold">
 
     </TextView>
@@ -91,18 +92,19 @@
         android:text="01012345678"
         android:textSize="25dp"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.55"
-        android:textStyle="bold"/>
+        android:backgroundTint="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/RiskPercentView"
+        android:layout_marginTop="15dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:gravity="left|center_vertical"/>
+
 
 
 
 
     <Button
-        android:id="@+id/BanNumberButton"
+        android:id="@+id/ReInputButton"
         android:layout_width="350dp"
         android:layout_height="70dp"
         android:text="통화내용 다시 입력하기"
