--- a/app/src/main/res/layout/diagnose_writing.xml
+++ b/app/src/main/res/layout/diagnose_writing.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <View
+        android:id="@+id/TopView"
         android:layout_width="match_parent"
         android:layout_height="110dp"
         android:background="@color/white"
@@ -34,7 +35,7 @@
         android:id="@+id/BackButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="<-"
+        android:text="B"
         android:textColor="#28BEEE"
         android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,49 +60,61 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05"
         app:layout_constraintHorizontal_bias="0.9" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:scrollbars="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/TopView">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
     <TextView
+        android:id="@+id/CallStoryLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="통화내용"
         android:textSize="23dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TopView"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2"
-        app:layout_constraintHorizontal_bias="0.2" />
+        android:layout_marginStart="60dp"/>
 
     <EditText
-        android:id="@+id/OptionalPhoneNumber"
+        android:id="@+id/CallStory"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="통화 내용을 입력해주세요"
+        android:layout_height="350dp"
+        android:hint="통화 내용을 입력하세요"
+        android:layout_alignParentBottom="true"
         android:width="300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        android:lines="16"
-        android:maxLength="30"
+        app:layout_constraintTop_toBottomOf="@+id/CallStoryLabel"
+        android:layout_marginTop="40dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:lines="20"
+        android:minLines="12"
+        android:maxLines="16"
         android:scrollbars="vertical"
         android:gravity="left"
         />
 
     <Button
-        android:id="@+id/EndWrite"
-        android:layout_width="200dp"
+        android:id="@+id/EndWriteButton"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="작성하기"
         android:textColor="@color/white"
         android:backgroundTint="#28BEEE"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85"
+        app:layout_constraintTop_toBottomOf="@+id/CallStory"
+        android:layout_marginTop="70dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginEnd="120dp"
         />
-
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
